--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Check your password hashing algorithm here."
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -33,7 +33,7 @@
     />
     <script src="%PUBLIC_URL%/forge.js"></script>
 
-    <title>React App</title>
+    <title>Password Hashing Checker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
